@@ -7,8 +7,6 @@ package com.neo4j.causalclustering.messaging;
 
 import com.neo4j.causalclustering.core.consensus.RaftMessages;
 import com.neo4j.causalclustering.core.consensus.membership.MemberIdSet;
-import com.neo4j.causalclustering.core.consensus.protocol.v1.RaftProtocolClientInstallerV1;
-import com.neo4j.causalclustering.core.consensus.protocol.v1.RaftProtocolServerInstallerV1;
 import com.neo4j.causalclustering.core.consensus.protocol.v2.RaftProtocolClientInstallerV2;
 import com.neo4j.causalclustering.core.consensus.protocol.v2.RaftProtocolServerInstallerV2;
 import com.neo4j.causalclustering.identity.ClusterId;
@@ -35,15 +33,16 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Semaphore;
 
 import org.neo4j.configuration.Config;
+import org.neo4j.configuration.connectors.ConnectorPortRegister;
 import org.neo4j.helpers.AdvertisedSocketAddress;
 import org.neo4j.helpers.ListenSocketAddress;
 import org.neo4j.logging.LogProvider;
@@ -51,18 +50,19 @@ import org.neo4j.logging.NullLogProvider;
 import org.neo4j.test.scheduler.ThreadPoolJobScheduler;
 
 import static com.neo4j.causalclustering.handlers.VoidPipelineWrapperFactory.VOID_WRAPPER;
+import static com.neo4j.causalclustering.protocol.Protocol.ApplicationProtocolCategory.RAFT;
 import static java.util.Collections.emptyList;
 import static java.util.concurrent.TimeUnit.SECONDS;
+import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
 import static org.neo4j.helpers.collection.Iterators.asSet;
 
 class RaftSenderIT
 {
     private final LogProvider logProvider = NullLogProvider.getInstance();
 
-    private final ApplicationSupportedProtocols supportedApplicationProtocol = new ApplicationSupportedProtocols( Protocol.ApplicationProtocolCategory.RAFT,
-            Arrays.asList( ApplicationProtocols.RAFT_1.implementation(), ApplicationProtocols.RAFT_2.implementation() ) );
+    private final ApplicationSupportedProtocols supportedApplicationProtocol = new ApplicationSupportedProtocols( RAFT,
+            ApplicationProtocols.withCategory( RAFT ).stream().map( Protocol::implementation ).collect( toList() ) );
     private final Collection<ModifierSupportedProtocols> supportedModifierProtocols = emptyList();
 
     private final ApplicationProtocolRepository applicationProtocolRepository =
@@ -127,12 +127,10 @@ class RaftSenderIT
     {
         NettyPipelineBuilderFactory pipelineFactory = new NettyPipelineBuilderFactory( VOID_WRAPPER );
 
-        RaftProtocolServerInstallerV1.Factory factoryV1 = new RaftProtocolServerInstallerV1.Factory( nettyHandler, pipelineFactory,
-                DEFAULT_DATABASE_NAME, logProvider );
         RaftProtocolServerInstallerV2.Factory factoryV2 =
                 new RaftProtocolServerInstallerV2.Factory( nettyHandler, pipelineFactory, logProvider );
         ProtocolInstallerRepository<ProtocolInstaller.Orientation.Server> installer =
-                new ProtocolInstallerRepository<>( Arrays.asList( factoryV1, factoryV2 ), ModifierProtocolInstaller.allServerInstallers );
+                new ProtocolInstallerRepository<>( List.of( factoryV2 ), ModifierProtocolInstaller.allServerInstallers );
 
         HandshakeServerInitializer channelInitializer = new HandshakeServerInitializer( applicationProtocolRepository, modifierProtocolRepository,
                 installer, pipelineFactory, logProvider );
@@ -140,7 +138,7 @@ class RaftSenderIT
         ListenSocketAddress listenAddress = new ListenSocketAddress( "localhost", 0 );
         ExecutorService serverExecutor = Executors.newCachedThreadPool();
         return new Server( channelInitializer, null, logProvider, logProvider, listenAddress, "raft-server", serverExecutor,
-                BootstrapConfiguration.serverConfig( Config.defaults() ) );
+                new ConnectorPortRegister(), BootstrapConfiguration.serverConfig( Config.defaults() ) );
     }
 
     private RaftChannelPoolService raftPoolService( ApplicationProtocols clientProtocol )
@@ -148,12 +146,7 @@ class RaftSenderIT
         NettyPipelineBuilderFactory pipelineFactory = new NettyPipelineBuilderFactory( VOID_WRAPPER );
 
         ProtocolInstallerRepository<ProtocolInstaller.Orientation.Client> protocolInstaller;
-        if ( clientProtocol == ApplicationProtocols.RAFT_1 )
-        {
-            RaftProtocolClientInstallerV1.Factory factoryV1 = new RaftProtocolClientInstallerV1.Factory( pipelineFactory, logProvider );
-            protocolInstaller = new ProtocolInstallerRepository<>( Collections.singleton( factoryV1 ), ModifierProtocolInstaller.allClientInstallers );
-        }
-        else if ( clientProtocol == ApplicationProtocols.RAFT_2 )
+        if ( clientProtocol == ApplicationProtocols.RAFT_2 )
         {
             RaftProtocolClientInstallerV2.Factory factoryV2 = new RaftProtocolClientInstallerV2.Factory( pipelineFactory, logProvider );
             protocolInstaller = new ProtocolInstallerRepository<>( Collections.singleton( factoryV2 ), ModifierProtocolInstaller.allClientInstallers );
@@ -178,6 +171,6 @@ class RaftSenderIT
     private ApplicationProtocolRepository clientRepository( ApplicationProtocols clientProtocol )
     {
         return new ApplicationProtocolRepository( new ApplicationProtocols[]{clientProtocol},
-                new ApplicationSupportedProtocols( Protocol.ApplicationProtocolCategory.RAFT, emptyList() ) );
+                new ApplicationSupportedProtocols( RAFT, emptyList() ) );
     }
 }
